--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "node dist/index.js",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
-
   },
   "author": "favio",
   "license": "MIT",
@@ -22,6 +21,8 @@
     "vuepress": "^1.9.8"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.1.0",
     "sequelize": "^6.28.0"
   }
 }
